After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 618709 - gnome-settings-daemon crashes when viewing non-default keyboard layout
gnome-settings-daemon crashes when viewing non-default keyboard layout
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Drawing
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
Depends on:
Blocks:
 
 
Reported: 2010-05-15 13:41 UTC by Jiri Cerny
Modified: 2010-06-17 22:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch solving the problem (314 bytes, patch)
2010-05-15 13:41 UTC, Jiri Cerny
none Details | Review

Description Jiri Cerny 2010-05-15 13:41:00 UTC
Created attachment 161122 [details] [review]
patch solving the problem

In recent fedora 13 with libgnomekbd 2.30.1 rightclicking on the keyboard indicator and then choosing view keyboard layout for any non-default layout crashes gnome-settings-daemon.

The abrt backtrace says that it crases in cairo_move somewhere. I started to trace it a little bit and found out that in function xkb_state_notify_event_filter in gkbd-keyboard-drawing.c the function create_cairo is called when drawing->pixmap is NULL. It then creates non-valid cairo context ... crash

I do not understand the xkb_state_notify_event_filter function, but the following patch solves (or goes around) the problem.
Comment 1 Sergey V. Udaltsov 2010-05-15 20:47:58 UTC
It is actually solution, but not 100% correct. Could you please try libgnomekbd from git. Especially this patch:

http://git.gnome.org/browse/libgnomekbd/commit/?id=6ab1ce6cdcc1ba09648954a1cb82541f68db39f3

If that works, I'll backport it to 2.30.
Comment 2 Jiri Cerny 2010-05-17 07:31:04 UTC
The libgnomekbd from git works, thanks.
Comment 3 Sebastien Bacher 2010-06-16 12:31:18 UTC
can you backport the fix to the stable serie now?