Potential crash fixed

Hopefully closing https://bugzilla.gnome.org/show_bug.cgi?id=618709
(cherry picked from commit 6ab1ce6cdcc1ba09648954a1cb82541f68db39f3)